[tool.poetry]
name = "python-algorithms"
version = "0.1.0"
description = ""
authors = ["afoil <oakira114@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
